--- a/css/style.less
+++ b/css/style.less
@@ -1,6 +1,3 @@
-@tile-height: 51px;
-@tile-width: 51px;
-
 body
 {
 	background: #303030;
@@ -29,6 +26,7 @@ body
 	left: 50%;
 }
 
+#reflections,
 #gallery
 {
 	-webkit-perspective: 800;
@@ -50,9 +48,9 @@ body
 		transition: transform 1s;
 
 		float: left;
-		height: @tile-height;
+		height: 75px;
 		position: relative;
-		width: @tile-width;
+		width: 75px;
 
 		&.flipped
 		{
@@ -61,12 +59,6 @@ body
 			transform: rotateY(-180deg);
 
 			opacity: 1;
-		}
-
-		img
-		{
-			height: @tile-height;
-			width: @tile-width;
 		}
 
 		.front,
@@ -95,10 +87,9 @@ body
 			background-repeat: no-repeat;
 		}
 	}
+}
 
-	.reflection
-	{
-		-webkit-box-reflect: below 0 -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.5, transparent), to(white)); 
-		-moz-box-reflect: below 0 -moz-gradient(linear, left top, left bottom, from(transparent), color-stop(0.5, transparent), to(white)); 
-	}
+#reflections
+{
+	opacity: 1;
 }
