--- a/css/style.less
+++ b/css/style.less
@@ -5,15 +5,17 @@ body
 
 #content
 {
-	position: relative;
-	margin-top: 100px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translateX(-50%) translateY(-50%);
 }
 
 #spinner
 {
 	background-color: #c6c6c6;
 	border-radius: 10px;
-	box-shadow: 0 0 10px 1px #000;
+	box-shadow: 0 0 10px 1px rgba(0,0,0,0.5);
 	display: none;
 	height: 60px;
 	margin: -30px 0 0 -30px;
@@ -26,7 +28,6 @@ body
 	left: 50%;
 }
 
-#reflections,
 #gallery
 {
 	-webkit-perspective: 800;
@@ -48,17 +49,15 @@ body
 		transition: transform 1s;
 
 		float: left;
-		height: 75px;
+		height: 150px;
 		position: relative;
-		width: 75px;
+		width: 150px;
 
 		&.flipped
 		{
 			-webkit-transform: rotateY(-180deg);
 			-moz-transform: rotateY(-180deg);
 			transform: rotateY(-180deg);
-
-			opacity: 1;
 		}
 
 		.front,
@@ -71,11 +70,26 @@ body
 			height: 100%;
 			position: absolute;
 			width: 100%;
+
+			img
+			{
+				height: 150px;
+				width: 150px;
+			}
 		}
 
 		.front
 		{
-			opacity: 0.5;
+			img
+			{
+				opacity: 0.5;
+				transition: opacity 0.5s; 
+
+				&:hover
+				{
+					opacity: 1;
+				}
+			}
 		}
 
 		.back
@@ -87,9 +101,4 @@ body
 			background-repeat: no-repeat;
 		}
 	}
-}
-
-#reflections
-{
-	opacity: 1;
 }
